lots of cleanup

--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -1,6 +1,3 @@
-# ~/.bashrc: executed by bash(1) for non-login shells.
-
-
 # some more ls aliases
 alias ll='ls -alF'
 alias l='ls -CF'
@@ -8,7 +5,6 @@ alias la='ls -lA'
 alias cls='clear'
 alias ..='cd ..'
 alias ...='cd ../..'
-alias clip='clip.exe'
 
 alias ranger='. ranger'
 alias g='git'
@@ -19,3 +15,7 @@ alias plz='sudo'
 # Add an "alert" alias for long running commands.  Use like so:
 #   sleep 10; alert
 alias alert='notify-send --urgency=low -i "$([ $? = 0 ] && echo terminal || echo error)" "$(history|tail -n1|sed -e '\''s/^\s*[0-9]\+\s*//;s/[;&|]\s*alert$//'\'')"'
+
+{{if .osinwsl}}
+alias clip='clip.exe'
+{{end}}
