--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,3 +1,88 @@
+# Sources
+# ============================================================
+source $HOME/.aliases
+source $HOME/.zshenv
+
+# GUI
+# ============================================================
+{{- if osinwsl }}
+# X-server stuff
+export DISPLAY=$(cat /etc/resolv.conf | grep nameserver | awk '{print $2; exit;}'):0.0
+{{- end }}
+
+# Paths + Runtimes
+# ============================================================
+export PATH=$HOME/bin:$PATH
+export PATH=$HOME/.local/bin:$PATH
+
+# Python
+# -------------------------------
+# export PYENV_ROOT="$HOME/.pyenv"
+# command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
+# eval "$(pyenv init -)"
+# eval "$(pyenv virtualenv-init -)"
+export PATH=$HOME/.poetry/bin:$PATH
+
+# Rust
+# -------------------------------
+source $HOME/.cargo/env
+export PATH=$HOME/.cargo/bin:$PATH
+
+# Ruby
+# -------------------------------
+# Add RVM to PATH for scripting. Make sure this is the last PATH variable change.
+export PATH=$HOME/.rvm/bin:$PATH
+
+# Go
+# -------------------------------
+export GO111MODULE=on
+export PATH=$HOME/go/bin:$PATH
+export GOPATH=$HOME/go
+
+# Node
+# -------------------------------
+# fnm
+export PATH=$HOME/.fnm:$PATH
+eval "$(fnm env --use-on-cd)"
+# Yarn
+export PATH=$HOME/.yarn/bin:$PATH
+export PATH=$HOME/.config/yarn/global/node_modules/.bin:$PATH
+
+# TTY Terminal Prompt
+# ============================================================
+
+# Much Better Colour
+# -------------------------------
+LS_COLORS='ow=01;35;40'
+export LS_COLORS
+
+# Language
+# -------------------------------
+export LANG=en_US.UTF-8
+
+# Sensible history
+# -------------------------------
+# don't put duplicate lines or lines starting with space in the history.
+# See bash(1) for more options
+HISTCONTROL=ignoreboth
+
+# for setting history length see HISTSIZE and HISTFILESIZE in bash(1)
+HISTSIZE=3000
+HISTFILESIZE=5000
+
+# Editor
+# -------------------------------
+# Preferred editor for local and remote sessions
+if [[ -n $SSH_CONNECTION ]]; then
+  export EDITOR='nvim'
+else
+  export EDITOR='lvim'
+fi
+
+# P10k
+# -------------------------------
+# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
+[[ ! -f ~/.p10k.zsh ]] || source $HOME/.p10k.zsh
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
@@ -5,11 +90,11 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
-# If you come from bash you might have to change your $PATH.
-# export PATH=$HOME/bin:/usr/local/bin:$PATH
+# Oh My ZSH
+# -------------------------------
 
 # Path to your oh-my-zsh installation.
-export ZSH="/home/mufossa/.oh-my-zsh"
+export ZSH="$HOME/.oh-my-zsh"
 
 # Set name of the theme to load --- if set to "random", it will
 # load a random theme each time oh-my-zsh is loaded, in which case,
@@ -82,52 +167,49 @@ ZSH_THEME="powerlevel10k/powerlevel10k"
 plugins=(
   git
   zsh-autosuggestions
-  poetry
+  zsh-syntax-highlighting
+  # poetry
 )
 
 source $ZSH/oh-my-zsh.sh
 
-# User configuration
 
-# export MANPATH="/usr/local/man:$MANPATH"
+# Functions
+# ============================================================
 
-# You may need to manually set your language environment
-# export LANG=en_US.UTF-8
+# Gitignore generator from TopTal
+# -------------------------------
+function gi() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;}
 
-# Preferred editor for local and remote sessions
-# if [[ -n $SSH_CONNECTION ]]; then
-#   export EDITOR='vim'
-# else
-#   export EDITOR='mvim'
-# fi
+# Z folder jumper
+# -------------------------------
+source $HOME/bin/z.sh
 
-# Compilation flags
-# export ARCHFLAGS="-arch x86_64"
+# Create a new directory and enter it
+# -------------------------------
+function mkd() {
+	mkdir -p "$@" && cd "$@"
+}
 
-# Set personal aliases, overriding those provided by oh-my-zsh libs,
-# plugins, and themes. Aliases can be placed here, though oh-my-zsh
-# users are encouraged to define aliases within the ZSH_CUSTOM folder.
-# For a full list of active aliases, run `alias`.
-#
-# Example aliases
-# alias zshconfig="mate ~/.zshrc"
-# alias ohmyzsh="mate ~/.oh-my-zsh"
+# # Codi
+# # -------------------------------
+# # Usage: codi [filetype] [filename]
+# codi() {
+#   local syntax="${1:-javascript}"
+#   shift
+#   lvim -c \
+#     "let g:dashboard_disable_at_vimenter = 1 |\
+#     set bt=nofile ls=0 noru nonu nornu |\
+#     hi ColorColumn ctermbg=NONE |\
+#     hi VertSplit ctermbg=NONE |\
+#     hi NonText ctermfg=0 |\
+#     Codi $syntax" "$@"
+# }
 
-if [ -f ~/.bash_aliases ]; then
-    . ~/.bash_aliases
-fi
+# Cloud Services
+# ============================================================
 
-. ~/.bash_common
-. ~/bin/z.sh
-
-
-
-
-# Add RVM to PATH for scripting. Make sure this is the last PATH variable change.
-source /home/mufossa/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-
-# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
-eval 
-SFDX_AC_ZSH_SETUP_PATH=/home/mufossa/.cache/sfdx/autocomplete/zsh_setup && test -f $SFDX_AC_ZSH_SETUP_PATH && source $SFDX_AC_ZSH_SETUP_PATH; # sfdx autocomplete setupeval 
-SFDX_AC_ZSH_SETUP_PATH=/home/mufossa/.cache/sfdx/autocomplete/zsh_setup && test -f $SFDX_AC_ZSH_SETUP_PATH && source $SFDX_AC_ZSH_SETUP_PATH; # sfdx autocomplete setup
+# Salesforce
+# -------------------------------
+# sfdx autocomplete setup
+SFDX_AC_ZSH_SETUP_PATH=$HOME/.cache/sfdx/autocomplete/zsh_setup && test -f $SFDX_AC_ZSH_SETUP_PATH && source $SFDX_AC_ZSH_SETUP_PATH;
