--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,7 +5,7 @@ source $HOME/.zshenv
 
 # GUI
 # ============================================================
-{{- if osinwsl }}
+{{- if .osinwsl }}
 # X-server stuff
 export DISPLAY=$(cat /etc/resolv.conf | grep nameserver | awk '{print $2; exit;}'):0.0
 {{- end }}
