--- a/dot_aliases.tmpl
+++ b/dot_aliases.tmpl
@@ -10,6 +10,7 @@ alias ranger='. ranger'
 alias g='git'
 alias h='history'
 alias plz='sudo'
+alias cm='chezmoi'
 
 
 # Add an "alert" alias for long running commands.  Use like so:
