--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -1,7 +1,7 @@
 "bin":
   type: archive
   url: https://github.com/rupa/z/archive/master.tar.gz
-  exact: true
+  exact: false
   stripComponents: 1
   refreshPeriod: 168h
 ".oh-my-zsh":
