--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -1,3 +1,7 @@
+{{$sudo := "sudo " -}}
+{{if eq .chezmoi.username "root" -}}
+{{  $sudo = "" -}}
+{{end -}}
 {{  if eq .ostype "debian" -}}
 #!/bin/bash
 
@@ -17,10 +21,6 @@
 
 set -eufo pipefail
 
-{{$sudo := "sudo " -}}
-{{if eq .chezmoi.username "root" -}}
-{{    $sudo = "" -}}
-{{end -}}
 {{$sudo}}apt-get update
 {{$sudo}}apt-get install -y {{ $packages | join " " }}
 
@@ -33,6 +33,18 @@ brew install ripgrep
 brew install neovim
 {{ end -}}
 
+
+{{ if eq .ostype "debian"}}
+# Install Go
+{{$sudo}}add-apt-repository -y ppa:longsleep/golang-backports
+{{$sudo}}apt-get install -y golang
+
+# Install LazyGit
+LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": "v\K[^"]*')
+curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
+tar xf lazygit.tar.gz lazygit
+sudo install lazygit $HOME/.local/bin
+{{end}}
 
 {{ if or (eq .ostype "debian") (eq .ostype "darwin") -}}
 # Install Debian/Darwin Apps
