--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -16,6 +16,7 @@
         "python3"
         "python3-pip"
         "unzip"
+        "git"
         "zsh" -}}
 
 
@@ -23,6 +24,9 @@ set -eufo pipefail
 
 {{$sudo}}apt-get update
 {{$sudo}}apt-get install -y {{ $packages | join " " }}
+
+# set zsh as the main shell
+{{$sudo}}chsh -s $(which zsh)
 
 {{ else if eq .ostype "darwin" -}}
 # OSX - Darwin
@@ -42,7 +46,7 @@ brew install neovim
 LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": "v\K[^"]*')
 curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
 tar xf lazygit.tar.gz lazygit
-sudo install lazygit $HOME/.local/bin
+{{$sudo}}install lazygit $HOME/.local/bin
 {{end}}
 
 {{ if or (eq .ostype "debian") (eq .ostype "darwin") -}}
