--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -3,6 +3,10 @@
 {{if eq .chezmoi.username "root" -}}
 {{  $sudo = "" -}}
 {{end -}}
+
+# using downloadExtract from .functions
+{{include ".chezmoiscripts/.functions" }}
+
 {{  if eq .ostype "debian" -}}
 # Debian systems
 # ============================================================
@@ -15,18 +19,23 @@
         "units"
         "python3"
         "python3-pip"
+        "golang"
         "unzip"
         "git"
-        "zsh" -}}
+        "zsh"
+        "ranger" -}}
 
 
 set -eufo pipefail
+
+{{$sudo}}add-apt-repository -y ppa:longsleep/golang-backports
+
 
 {{$sudo}}apt-get update
 {{$sudo}}apt-get install -y {{ $packages | join " " }}
 
 # set zsh as the main shell
-{{$sudo}}chsh -s $(which zsh)
+{{$sudo}}chsh -s $(which zsh) {{.chezmoi.username}}
 
 {{ else if eq .ostype "darwin" -}}
 # OSX - Darwin
@@ -37,28 +46,35 @@ brew install neovim
 {{ end -}}
 
 
-{{ if eq .ostype "debian"}}
-# Install Go
-{{$sudo}}add-apt-repository -y ppa:longsleep/golang-backports
-{{$sudo}}apt-get install -y golang
-
-# Install LazyGit
-LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": "v\K[^"]*')
-curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
-tar xf lazygit.tar.gz lazygit
-{{$sudo}}install lazygit $HOME/.local/bin
-{{end}}
-
 {{ if or (eq .ostype "debian") (eq .ostype "darwin") -}}
-# Install Debian/Darwin Apps
+# Install Runtimes
 # ============================================================
+
 # Install Rust using rustup
+# -------------------------------
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 
-# Install Node using fnm
-curl -fsSL https://fnm.vercel.app/install | bash
+# Install Node + fnm
+# -------------------------------
+curl -fsSL https://fnm.vercel.app/install | bash -s -- --skip-shell
 export PATH=$HOME/.local/share/fnm:$PATH
 eval "`fnm env`"
 fnm install --lts
 fnm use lts/latest
+
+# Install Applications
+# ============================================================
+
+# Install Lazygit
+# -------------------------------
+lazygit_version=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": "v\K[^"]*')
+lazygit_folder=$(downloadExtract lazygit "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${lazygit_version}_Linux_x86_64.tar.gz")
+{{$sudo}}install $lazygit_folder/lazygit $HOME/.local/bin
+
+
+# Install git tools
+# -------------------------------
+npm install -g diff-so-fancy
+sudo pip install diff-highlight
+
 {{ end -}}
