--- a/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
@@ -1,54 +1,23 @@
 #!/bin/bash
 
-{{$sudo := "sudo " -}}
-{{if eq .chezmoi.username "root" -}}
-{{  $sudo = "" -}}
-{{end -}}
+# using downloadExtract from .functions
+{{include ".chezmoiscripts/.functions" }}
 
+nvm_version="v0.8.3"    # "stable" is also an option
 
-{{  if eq .ostype "debian" -}}
-{{/* nvm_version=stable */}}
-nvm_version="v0.8.3"
-
-tmp_folder="/tmp/nvim"
-tmp_tar="$tmp_folder/nvim.tar.gz"
-tmp_contents="$tmp_folder/nvim-linux64"
 local_folder="$HOME/.local"
+mkdir -p $local_folder
 
-set -eufo pipefail
+
+set -euo pipefail
 
 # Install NeoVim
 # ============================================================
-# clear tmp folders
-rm -rf /tmp/nvim         # intentionally hard written to avoid disasters
-# create tmp folders
-mkdir -p $tmp_folder
-# download nvim
-curl -L -o $tmp_tar "https://github.com/neovim/neovim/releases/download/$nvm_version/nvim-linux64.tar.gz"
-# extract download
-tar xzvf $tmp_tar --directory $tmp_folder
+nvim_extracted=$(downloadExtract nvim_chezmoi "https://github.com/neovim/neovim/releases/download/$nvm_version/nvim-linux64.tar.gz")
 # move to local
-mkdir -p $local_folder
-cp -rf "$tmp_contents/"* "$local_folder/"
-
-
-{{/*
-Download NVM release
-
-https://github.com/neovim/neovim/releases/download/$nvm_version/nvim-linux64.tar.gz.sha256sum
-sha256sum -c nvim.appimage.sha256sum
-*/}}
-
+cp -rf "$nvim_extracted/nvim-linux64/"* "$local_folder/"
+export PATH=$HOME/.local/bin:$PATH      # make sure our nvim is the one that runs in this script
 
 # Install LunarVim
 # ============================================================
 LV_BRANCH='release-1.2/neovim-0.8' bash <(curl -s https://raw.githubusercontent.com/lunarvim/lunarvim/fc6873809934917b470bff1b072171879899a36b/utils/installer/install.sh)
-
-{{ end -}}
-
-
-
-
-
-
-
