moving files around

--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -5,7 +5,7 @@
 {{end -}}
 
 # using downloadExtract from .functions
-{{include ".chezmoiscripts/.functions" }}
+{{include ".helpers/.functions" }}
 
 {{  if eq .ostype "debian" -}}
 # Debian systems
