--- a/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # using downloadExtract from .functions
-{{include ".chezmoiscripts/.functions" }}
+{{include ".helpers/.functions" }}
 
 nvm_version="v0.8.3"    # "stable" is also an option
 
