--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -53,6 +53,7 @@ brew install neovim
 # Install Rust using rustup
 # -------------------------------
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+export PATH=$HOME/.cargo/bin:$PATH
 
 # Install Node + fnm
 # -------------------------------
