--- a/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_11-install-lvim.sh.tmpl
@@ -20,4 +20,5 @@ export PATH=$HOME/.local/bin:$PATH      # make sure our nvim is the one that run
 
 # Install LunarVim
 # ============================================================
+export PATH=$HOME/.cargo/bin:$PATH
 LV_BRANCH='release-1.2/neovim-0.8' bash <(curl -s https://raw.githubusercontent.com/lunarvim/lunarvim/fc6873809934917b470bff1b072171879899a36b/utils/installer/install.sh)
