--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -1,9 +1,3 @@
-"bin":
-  type: archive
-  url: https://github.com/rupa/z/archive/master.tar.gz
-  exact: false
-  stripComponents: 1
-  refreshPeriod: 168h
 ".oh-my-zsh":
   type: archive
   url: https://github.com/ohmyzsh/ohmyzsh/archive/master.tar.gz
@@ -13,6 +7,12 @@
 ".oh-my-zsh/custom/plugins/zsh-syntax-highlighting":
   type: archive
   url: https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz
+  exact: true
+  stripComponents: 1
+  refreshPeriod: 168h
+".oh-my-zsh/custom/plugins/zsh-autosuggestions":
+  type: archive
+  url: https://github.com/zsh-users/zsh-autosuggestions/archive/master.tar.gz
   exact: true
   stripComponents: 1
   refreshPeriod: 168h
