--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -74,8 +74,8 @@ fnm use lts/latest
 # Install Z by rupa
 # -------------------------------
 z_folder=$(downloadExtract zfunc "https://github.com/rupa/z/archive/master.tar.gz")
-cp -f $z_folder/z.sh $local_folder/bin/
-cp -f $z_folder/z.1 $local_folder/share/man/man1/
+cp -f $z_folder/z-master/z.sh $local_folder/bin/
+cp -f $z_folder/z-master/z.1 $local_folder/share/man/man1/
 
 # Install Lazygit
 # -------------------------------
