--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,8 +1,8 @@
 # Sources
 # ============================================================
-source $HOME/.aliases
-source $HOME/.zshenv
 source $HOME/.functions
+source $HOME/.aliases
+include $HOME/.zshenv # include is a function in .functions
 
 # GUI
 # ============================================================
