--- a/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_10-install-packages.sh.tmpl
@@ -28,7 +28,13 @@ mkdir -p $local_folder/share/man/man1/
         "unzip"
         "git"
         "zsh"
-        "ranger" -}}
+        "ranger"
+        "w3m"
+        "highlight"
+        "caca-utils"
+        "atool"
+        "poppler-utils"
+        "mediainfo" -}}
 
 
 set -eufo pipefail
